RESOLVED FIXED203092
FetchResponse should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203092
Summary FetchResponse should not prevent entering the back/forward cache
Chris Dumez
Reported 2019-10-17 09:45:32 PDT
FetchResponse should not prevent entering the back/forward cache.
Attachments
Patch (6.94 KB, patch)
2019-10-23 14:37 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-23 14:31:04 PDT
Chris Dumez
Comment 2 2019-10-23 14:37:41 PDT
WebKit Commit Bot
Comment 3 2019-10-24 09:57:40 PDT
Comment on attachment 381730 [details] Patch Clearing flags on attachment: 381730 Committed r251545: <https://trac.webkit.org/changeset/251545>
WebKit Commit Bot
Comment 4 2019-10-24 09:57:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.