FetchResponse should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203092 <rdar://problem/56554677>

Reviewed by Alex Christensen.

Source/WebCore:

Drop shouldPreventEnteringBackForwardCache_DEPRECATED() in FetchResponse to allow pages to
enter the back/forward cache, even when the fetch response has a blob loader. r251495
already made this safe by updating the FetchBodyOwner parent class to not resolve promises
while in the back/forward cache.

Test: fast/history/page-cache-active-fetch-response-blobReadAsBlob.html

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
* Modules/fetch/FetchResponse.h:

LayoutTests:

Add layout test coverage.

* TestExpectations:
* fast/history/page-cache-active-fetch-response-blobReadAsBlob-expected.txt: Added.
* fast/history/page-cache-active-fetch-response-blobReadAsBlob.html: Added.


Canonical link: https://commits.webkit.org/216777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251545 268f45cc-cd09-0410-ab3c-d52691b4dbfc