Source/WebCore/Modules/fetch/FetchResponse.cpp
@@ -536,12 +536,6 @@ const char* FetchResponse::activeDOMObjectName() const
     return "Response";
 }
 
-bool FetchResponse::shouldPreventEnteringBackForwardCache_DEPRECATED() const
-{
-    // FIXME: This should never prevent entering the back/forward cache.
-    return isActive();
-}
-
 ResourceResponse FetchResponse::resourceResponse() const
 {
     auto response = m_internalResponse;
