Source/WebCore/Modules/fetch/FetchResponse.h
@@ -117,7 +117,6 @@ private:
 
     void stop() final;
     const char* activeDOMObjectName() const final;
-    bool shouldPreventEnteringBackForwardCache_DEPRECATED() const final;
 
     const ResourceResponse& filteredResponse() const;
 
